<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add_address">Add address</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>
    <string name="checkout">Checkout</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="cart_product_price_format">\$%.2f</string>
    <string name="total_price_format">\$%,d  us</string>
</resources>