<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <ImageButton
        android:id="@+id/addressButton"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_address" />

    <TextView
        style="@style/MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:text="@string/add_address"
        app:layout_constraintBottom_toBottomOf="@+id/addressButton"
        app:layout_constraintEnd_toStartOf="@+id/addressButton"
        app:layout_constraintTop_toTopOf="@+id/addressButton" />

    <TextView
        android:id="@+id/cartTitle"
        style="@style/BoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="50dp"
        android:text="@string/my_cart"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/cartContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="cartScrollView, emptyCart" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/cartScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="49dp"
        android:background="@drawable/cart_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cartContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cartProductList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="33dp"
                android:layout_marginTop="80dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/dividerTop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cartContainer"
                tools:itemCount="2"
                tools:listitem="@layout/item_cart_product" />

            <View
                android:id="@+id/dividerTop"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="4dp"
                android:layout_marginBottom="216dp"
                android:alpha="0.25"
                android:background="@drawable/cart_divider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="55dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="108dp" />

            <TextView
                android:id="@+id/totalTitle"
                style="@style/NormalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/total"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/guidelineTitle"
                app:layout_constraintTop_toBottomOf="@+id/dividerTop" />

            <TextView
                android:id="@+id/deliveryTitle"
                style="@style/NormalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/delivery"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/guidelineTitle"
                app:layout_constraintTop_toBottomOf="@+id/totalTitle" />

            <TextView
                android:id="@+id/totalPrice"
                style="@style/BoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/totalTitle"
                app:layout_constraintStart_toStartOf="@+id/guidelineValue"
                app:layout_constraintTop_toTopOf="@+id/totalTitle"
                tools:text="$6,000 us" />

            <TextView
                android:id="@+id/deliveryCost"
                style="@style/BoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/deliveryTitle"
                app:layout_constraintStart_toStartOf="@+id/guidelineValue"
                app:layout_constraintTop_toTopOf="@+id/deliveryTitle"
                tools:text="Free" />

            <View
                android:id="@+id/dividerBottom"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="4dp"
                android:layout_marginBottom="125dp"
                android:alpha="0.2"
                android:background="@drawable/cart_divider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/checkout"
                style="@style/Button"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_marginHorizontal="44dp"
                android:layout_marginTop="27dp"
                android:text="@string/checkout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerBottom" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartTitle" />

    <include
        android:id="@+id/errorLayout"
        layout="@layout/error_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartTitle" />

    <TextView
        android:id="@+id/emptyCart"
        style="@style/MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart_is_empty"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>